--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@josh-providers/sqlite": "^1.0.13",
     "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
     "josh": "^0.1.0"
   }
 }
