--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "@josh-providers/sqlite": "^1.0.14",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "josh": "^0.1.1"
+    "josh": "wilsonthewolf/josh#serializer-key"
   }
 }
