--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "josh": "wilsonthewolf/josh#serializer-key"
+  },
+  "devDependencies": {
+    "eslint": "^7.9.0"
   }
 }
