--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "@josh-providers/sqlite": "^1.0.15",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "josh": "^0.2.0"
-  },
-  "devDependencies": {
+    "josh": "^0.2.0",
     "eslint": "^7.9.0"
   }
 }
